--- a/Week7/Lab7-xgb-eels.ipynb
+++ b/Week7/Lab7-xgb-eels.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "dd687480-182a-4416-9cdd-10eb33d147d1",
    "metadata": {
     "tags": []
@@ -51,6 +51,22 @@
     "# Download the datasets\n",
     "model_data = pd.read_csv(\"/courses/EDS232/Data/model.data.csv\").drop(columns=['Site'])\n",
     "eval_data = pd.read_csv(\"/courses/EDS232/Data/eval.data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "880dffb6-31c1-4077-b587-122ff10941ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a moons dataset\n",
+    "X,y = make_moons(n_sample = 1000, noise = 0.2, random_state = 808)\n",
+    "\n",
+    "# Split into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.2, random_state = 808)\n",
+    "\n",
+    "# Define XGBoost "
    ]
   },
   {
