--- a/Week7/Lab7-xgb-eels.ipynb
+++ b/Week7/Lab7-xgb-eels.ipynb
@@ -66,7 +66,11 @@
     "# Split into training and test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.2, random_state = 808)\n",
     "\n",
-    "# Define XGBoost "
+    "# Define XGBoost model\n",
+    "model = xgb.XGBClassifier(eval_metric = \"logloss\", random_state = 808)\n",
+    "\n",
+    "# Define hyperparameter dists\n",
+    "param_dist = {}"
    ]
   },
   {
